`fix:` align platform buttons

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,25 @@ nav {
 .secondary-button:hover {
   background-color: #2c6597;
 }
+.secondary-button-platform {
+  padding: 1rem 2.5rem;
+  background-color: #0478db;
+  outline: none;
+  border: none;
+  border-radius: 5rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+  font-weight: 600;
+  color: white;
+  transition: 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1.8rem;
+}
+.secondary-button-platform:hover {
+  background-color: #2c6597;
+}
 .about-section-container {
   margin-top: 20rem;
   position: relative;
